--- a/package.json
+++ b/package.json
@@ -8,23 +8,29 @@
     "chart.js": "^3.7.0",
     "chartjs-node-canvas": "^4.1.5",
     "cheerio": "^1.0.0-rc.10",
-    "discord-giveaways": "^5.0.1",
+    "deepmerge": "^4.2.2",
     "discord.js": "^13.3.1",
     "glob": "^7.2.0",
     "js-yaml": "^4.1.0",
     "mathjs": "^10.0.1",
     "mongoose": "^6.1.4",
+    "rimraf": "^3.0.2",
+    "serialize-javascript": "^6.0.0",
+    "typescript": "^4.5.5",
     "winston": "^3.3.3"
   },
   "scripts": {
-    "prebuild": "ynpx rimraf build",
-    "prebuild:w": "ynpx rimraf build",
-    "build": "tsc -p tsconfig.json",
-    "build:w": "tsc -p tsconfig.json --watch"
+    "prebuild": "yarn rimraf build",
+    "prebuild:w": "yarn rimraf build",
+    "build": "yarn tsc -p tsconfig.json",
+    "build:w": "yarn tsc -p tsconfig.json --watch",
+    "start": "node ./build"
   },
   "license": "GPL-3.0-only",
   "devDependencies": {
-    "rimraf": "^3.0.2",
-    "ynpx": "^2.1.1"
+    "@types/node": "^8.0.27",
+    "ts-node": "^8.0.0",
+    "ts-node-dev": "^1.0.0",
+    "tslint": "^5.16.0"
   }
 }
